--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body>
-<h1>may31</h1>
+<h1>Master branch</h1>
   <script src="js/bootstrap.min.js" charset="utf-8"></script>
 </body>
 </html>
