--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Pet Store</title>
+    <!-- link google fonts here -->
+    <!-- link all the css here -->
 </head>
 <body>
-<h1>Master branch</h1>
-  <script src="js/bootstrap.min.js" charset="utf-8"></script>
+    <!-- body site code here -->
+
+    <!-- link all the scripts here -->
 </body>
 </html>
